# test-practice-blog

./: README.md
backend/: pyproject.toml
backend/api/: auth.py  main.py  migrate_db.py
backend/api/cruds/: user.py
backend/api/models/: blog.py
backend/api/router/: blog.py  user.py
backend/api/schemas/: blog.py  user.py
backend/api/test/: test_main.py
frontend/: .eslintignore  .eslintrc.js  .gitignore  .prettierignore  jest.config.js  package-lock.json  package.json  tsconfig.json
frontend/__tests__/: Footer.test.tsx  Header.test.tsx  error.test.tsx  loading.test.tsx
frontend/__tests__/articles/new/: page.test.tsx
frontend/__tests__/components/: ArticleCard.test.tsx  ArticleList.test.tsx
frontend/src/app/: Footer.tsx  Header.tsx  error.tsx  layout.tsx  loading.tsx  page.tsx
frontend/src/app/articles/[id]/: page.tsx
frontend/src/app/articles/new/: page.tsx
frontend/src/app/components/: ArticleCard.tsx  ArticleContent.tsx  ArticleList.tsx  DeleteButton.tsx  Index.tsx
frontend/src/app/types/: index.ts
frontend/src/lib/: config.ts
